# osos-bawabah-ai

./: .env  README.md  docker-compose-dev.yaml  docker-compose.yaml  env.example  pyproject.toml  test_dolphin_ocr.py
.github/workflows/: CI.yml
app/: Dockerfile  config.py  main.py
app/docs/: README.md  api.md  architecture.md  deployment.md  development.md  stt.md  testing.md
app/routers/: image_to_text.py  itx.py  ocr.py  rerank.py  stt.py  tts.py
app/services/: dolphin_ocr_service.py  itx_service.py  model_loader.py  rerank_services.py  stt_service.py  tts_service.py  whisper_large.py
tests/: itx.http
